--- a/postcard.css
+++ b/postcard.css
@@ -24,7 +24,7 @@ body{
     width: 50%;
 }
 .box2{
-    background-image: url(/image5.jpg);
+    background-image: url(image5.jpg);
     height: 300px;
     width:50%;
     padding: 50px;
