--- a/postcard.css
+++ b/postcard.css
@@ -38,13 +38,10 @@ body{
     font-family: 'Inter';
     font-weight:700;
      text-align: justify;
-     font-stretch: extra-expanded;
+    
     
 }
-td{
-    color: white;
 
-}
 .mainparagraph{
     color: hsla(0, 0%, 100%, .75);
     margin-top: 10px;
@@ -55,23 +52,80 @@ td{
     
     
 }
-td{
+.grid{
+    display: grid;
+    gap: 10px;
+    margin-top: 40px;
+    grid-template-areas:
+    'a b c' ;
+}
+.item1{
+    grid-area: a;
+}
+.item2{
+    grid-area: b;
+}
+.item3{
+    grid-area: c;
+}
+.para{
     color: hsla(0, 0%, 100%, .6);
     padding: 20px;
     padding-top: 0;
     padding-left: 0;
     padding-bottom: 0;
+    font-size: 13px;
 }
-tr{
-    margin:20px;
-}
-th{
+
+h3{
     color:white;
     text-align: left;
 }
-table{
-    margin-top: 40px;
+
+
+
+@media screen and (max-width:422px){
+.parent{
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+    padding: 1rem;
+    height: 130vh;
 }
-/* .huerotate{
-    filter: hue-rotate(180deg);
-} */
+.box1{
+    width: 100%;
+    height: 90vh;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.box2{
+    width: 100%;
+    height: 40vh;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.mainheading{
+font-size: 20px;
+text-align: center;
+}
+.mainparagraph{
+    text-align: center;
+    font-size: 10px;
+}
+.grid{
+    display: grid;
+  grid-template-areas: 'a'
+  'b'
+  'c';
+ text-align: center;
+ gap: 20px;
+}
+h3{
+    text-align: center;
+}
+.para{
+    text-align: center;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+}
