--- a/postcard.css
+++ b/postcard.css
@@ -90,17 +90,17 @@ h3{
     flex-direction: column-reverse;
     width: 100%;
     padding: 1rem;
-    height: 130vh;
+    min-height: 130vh;
 }
 .box1{
     width: 100%;
-    height: 90vh;
+    min-height: 90vh;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
 .box2{
     width: 100%;
-    height: 40vh;
+    min-height: 40vh;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
